--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
     <app-map [business]="false" #app_map></app-map>
     
     <app-menu-logged-out class="spotbie-app-menu" 
+                        (myFavoritesEvt)="myFavorites()"
                         (spawnCategoriesOut)="spawnCategories($event)" 
                         (openHome)="openHome()">
     </app-menu-logged-out>
