--- a/src/app/spotbie/features/features.component.css
+++ b/src/app/spotbie/features/features.component.css
@@ -132,6 +132,7 @@ p{
     width: 25%;
     min-width: 25%;
     font-size: .6rem;
+    cursor: pointer;
 }
 .sb-homePageIconsTable img{
     max-width: 100px;
