--- a/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
+++ b/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
@@ -15,6 +15,10 @@
     
     <td *ngIf="isDesktop" class="sb-desktopNavBar" style="text-align: right; cursor: default;">
       
+      <span (click)="myFavorites()">
+        <i class="fas fa-star"></i>
+      </span>
+
       <span (click)="home()">
         HOME
       </span>
@@ -65,6 +69,10 @@
 
       <div (click)="spawnCategories('events')">
         EVENTS <i class="fa fa-angle-right"></i>
+      </div>
+
+      <div (click)="myFavorites()">
+        MY FAVORITES <i class="fas fa-angle-right"></i>
       </div>
 
       <div (click)="openWindow(signUpWindow)">
