--- a/src/app/spotbie/map/map.component.css
+++ b/src/app/spotbie/map/map.component.css
@@ -24,7 +24,7 @@
     max-width: 100%;
     height: 100vh;
     min-height: 100vh;
-    background-color: #181818;
+    background-color: #27242e;
 }
 .spotbie-agm-map{
     position: relative;
@@ -109,9 +109,16 @@
     min-width: 90%;
     max-width: 90%;
 }
+.spotbie-categoryPull{
+    position: relative;
+    margin: 0 auto;
+    width: 90%;
+    min-width: 90%;
+    max-width: 90%; 
+}
 .spotbie-close-categories{
     position: absolute;
-    top: 11px;
+    bottom: 11px;
     right: -70px;
     z-index: 99;
     padding: 8px;
@@ -120,7 +127,7 @@
     border-radius: 5px;
     cursor: pointer;
     color: white;
-    background-color: rgba(0,0,0,.9);
+    background-color: rgb(43, 194, 136);
 }
 .spotbie-controls-search-results{
     position: relative;
@@ -128,7 +135,6 @@
     font-size: 16px;
     cursor: pointer;
     text-align: center;
-    margin-bottom: 20px;
     border-radius: 10px;
 }
 .spotbie-controls-search-results td{
@@ -180,7 +186,7 @@
 }
 .spotbie-single-cat:hover,
 .spotbie-single-cat.single-cat-light:hover{
-    background-color: rgba(0,0,0,.25);
+    background-color: rgba(0,0,0,.1);
 }
 .spotbie-single-cat.single-cat-light{
     background-color: rgba(0,0,0,.10);
@@ -204,14 +210,13 @@
 .spotbie-sub-cat{
     position: relative;
     background-color: rgba(0, 0, 0, 0.13);
-    padding-left: 18px;
-    text-align: left;
+    text-align: center;
     margin-top: 3px;
     word-break: break-word;
-    font-size: 16px;
+    font-size: 13px;
     font-weight: normal;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 18px;
+    padding-bottom: 18px;
 }
 .spotbie-subgenre{
     position: relative;
@@ -248,6 +253,7 @@
     position: relative;
     padding-top: 5px;
     padding-bottom: 5px;
+    font-size: .9rem;
 }
 .spotbie-price-ranges{
     font-size: 16px;
@@ -691,6 +697,25 @@ swiper{
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.sb-optionGet{
+    position: relative;
+    display: inline-block;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
+    min-width: 60px;
+    width: 60px;
+    max-width: 60px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    cursor: pointer;
+}
+.sb-optionGet:hover{
+    opacity: 0.8; 
+}
+.sb-optionGet .fa-star{
+    color:rgb(43, 194, 136);
+    font-size: 25px;
+}
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1583px) { 
     .spotbie-search-result{
@@ -800,6 +825,28 @@ swiper{
         max-width: 90%;        
         font-size: .9rem;        
     }
+    .spotbie-sub-cat{
+        margin-top: 3px;
+        font-size: 11px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .sb-optionGet{ 
+        min-width: 45px;
+        width: 45px;
+        max-width: 45px; 
+    }  
+    .spotbie-categoryPull{
+        width: 100%;
+        min-width: 100%;
+        max-width: 100%;
+        background-color: rgba(0,0,0,.25)
+    }
+    .spotbie-search-results-title{
+        width: 100%;
+        min-width: 100%;
+        max-width: 100%;
+    }       
 }
 @media (max-width: 700px) { 
     .spotbie-map{
@@ -809,15 +856,6 @@ swiper{
     }
     .map-prompt-v-align{   
         width: 600px;
-    }
-    .sb-homePageIconsTable{
-        max-width: 90%;
-        min-width: 90%;
-        width: 90%;
-    }
-    .sb-homePageIconsTable img{
-        width: 70px;
-        min-width: 70px        
     }
     .spotbie-search-result{
         padding: 5px !important;
@@ -848,7 +886,8 @@ swiper{
     }
     .spotbie-close-categories{
         top: -42px;
-        left: 14px;
+        bottom: unset;
+        left: 21px;
         right: unset;        
     }
     .spotbie-map-search-by td{
@@ -989,7 +1028,6 @@ swiper{
         width: 100px;
         min-width: 100px;
         max-width: 100px;
-        border-radius: 5px;
     }
     .spotbie-controls-search-results img{
         width: 18px;
