--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -108,6 +108,22 @@
 
     </agm-map>    
 
+    <div class='spotbie-categoryPull' *ngIf="isMobile && map">
+
+      <div class='sb-optionGet' (click)="spawnCategories('food')">
+        <img src="assets/images/home_imgs/find-places-to-eat.svg" />
+      </div>
+
+      <div class='sb-optionGet' (click)="spawnCategories('events')">
+          <img src="assets/images/home_imgs/find-events.svg" />
+      </div>  
+
+      <div class='sb-optionGet' (click)="spawnCategories('shopping')">
+          <img src="assets/images/home_imgs/find-places-for-shopping.svg" />
+      </div> 
+
+    </div>
+
     <div class='spotbie-search-results' *ngIf="show_search_box && searchResults.length > 0">
 
       <div #scrollMapAppAnchor></div>
@@ -169,7 +185,17 @@
 
           </tr>    
         </table>
-    
+        
+        <div class="mt-4 mb-4 text-uppercase">
+
+          Sorted by {{ sort_by_txt }} 
+
+          <span *ngIf="sortAc != 4 && sortAc != 5 && sortAc != 6 && sortAc != 7 && sortAc != 8">
+            <i [ngClass]="sortingOrderClass(sorting_order)"></i>
+          </span>
+  
+        </div>
+
         <table class='spotbie-controls-search-results' 
                 (click)="showOpen()" 
                 title="Opened or Closed" 
@@ -252,10 +278,6 @@
       </div>
     
       <div class='spotbie-search-results-title spotbie-sorting text-uppercase'>
-    
-        Sorted by {{ sort_by_txt }} 
-        <span *ngIf="sortAc != 4 && sortAc != 5 && sortAc != 6 && sortAc != 7 && sortAc != 8">({{ sorting_order }})</span>
-        <span (click)="showOpen()" *ngIf="searchCategorySorter != 'events'"> - {{ showingOpenedStatus }}</span>
     
         <ng-template *ngIf="searchCategorySorter != 'events'">
           <span class='fa fa-circle spotbie-is-open' [ngStyle]="{ 'margin-left' : '5px' }"></span>
@@ -420,7 +442,7 @@
 
       <div [ngClass]="getMapPromptMobileInnerWrapperClassOne()">
 
-        <app-business-features (signUpEvent)="signUp()" *ngIf="isLoggedIn !== '1'"></app-business-features>
+        <app-business-features (signUpEvent)="signUp()" (spawnCategoriesEvt)="spawnCategories($event)" *ngIf="isLoggedIn !== '1'"></app-business-features>
 
         <app-business-dashboard *ngIf="isLoggedIn == '1'" #homeDashboard (openBusinessSettingsEvt)="openBusinessSettings()"></app-business-dashboard>
 
@@ -461,6 +483,22 @@
 
   <div class='spotbie-category-search-yelp animated slideInUp' *ngIf="catsUp">
   
+    <div class='spotbie-categoryPull' *ngIf="!isMobile">
+
+      <div class='sb-optionGet' (click)="spawnCategories('food')">
+        <img src="assets/images/home_imgs/find-places-to-eat.svg" />
+      </div>
+
+      <div class='sb-optionGet' (click)="spawnCategories('events')">
+          <img src="assets/images/home_imgs/find-events.svg" />
+      </div>  
+
+      <div class='sb-optionGet' (click)="spawnCategories('shopping')">
+          <img src="assets/images/home_imgs/find-places-for-shopping.svg" />
+      </div> 
+
+    </div>
+
     <input type='text' 
             class='spotbie-searchbar sb-input' 
             placeholder="{{ searchCategoriesPlaceHolder }}" 
@@ -525,6 +563,8 @@
   <app-info-object [info_object]="infoObject" (closeWindow)="infoObjectWindow.open = false" *ngIf="infoObjectWindow.open"></app-info-object>
 
   <app-user-info-object [currentMarker]="currentMarker" *ngIf="sliderRight" (close)="sliderRight = false"></app-user-info-object>
+
+  <app-my-favorites *ngIf="myFavoritesWindow.open" (closeWindow)="closeFavorites()"></app-my-favorites>
 
   <app-scroll-to-top></app-scroll-to-top>
 
