--- a/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.css
+++ b/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.css
@@ -23,19 +23,21 @@ h3{
     display: inline-block;
     margin-left: 1.5%;
     margin-right: 1.5%;
-    min-width: 24%;
-    width: 24%;
-    max-width: 24%;
+    min-width: 120px;
+    width: 120px;
+    max-width: 120px;
     padding-top: 15px;
     padding-bottom: 15px;
-}
-.sb-optionGet i{
-    font-size: 45px;
-    color: white;
+    cursor: pointer;
 }
 @media (max-width: 768px){
     .sb-qrImage {
         width: 150px;
         min-width: 150px
+    }
+    .sb-optionGet{
+        min-width: 26%;
+        width: 26%;
+        max-width: 26%;  
     }
 }
