--- a/src/app/spotbie/spotbie-logged-in/business-dashboard/business-dashboard.component.html
+++ b/src/app/spotbie/spotbie-logged-in/business-dashboard/business-dashboard.component.html
@@ -8,9 +8,10 @@
                     border-bottom: unset !important;" 
             *ngIf="displayBusinessSetUp" #businessSettingsAppAnchor>
 
-        <i class="fas fa-exclamation-triangle"></i>
+        <i class="fas fa-users"></i>
 
-        <h2 class="spotbie-text-gradient text-uppercase mt-4" style="display: inline-block;">BONKERS!</h2>
+        <h2 class="spotbie-text-gradient sb-welcome2Spotbie text-uppercase mt-4" 
+            style="display: inline-block;">WELCOME TO SPOTBIE</h2>
 
         <p class="spotbie-text-gradient mb-4">
             Looks like you need to finish setting up your account before starting to use our service.<br/>            
