--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
@@ -196,7 +196,7 @@
 
 </div>
 
-<div class='spotbie-overlay-window' *ngIf="true">
+<div class='spotbie-overlay-window' *ngIf="rewardCreated">
 
     <div class='sb-v-wrapper' style="display: grid; align-content: center;">
         
