--- a/src/app/spotbie/spotbie-logged-in/qr/qr.component.css
+++ b/src/app/spotbie/spotbie-logged-in/qr/qr.component.css
@@ -53,7 +53,8 @@ h5{
         padding: 20px;
     }
     .sb-scanQrTitle{
-        margin-top: 15px;
+        margin-top: 15px !important;
+        margin-bottom: 0px !important;    
     }
     .sb-qrTitleImage{
         max-width: 35px;
