--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
@@ -13,9 +13,6 @@
 .sb-input::placeholder{
     color: #828282 !important;
 }
-.sb-closeButton{
-    z-index: 99;
-}
 .spotbie-log-in-picture{
     position:absolute;
     left: 0;
@@ -65,9 +62,6 @@
 .spotbie-text-link{
     color : white;
 }
-.sb-login-top-padding{
-    padding-top: 20px;
-}
 .fa-eye::before{
     display: none;
 }
@@ -78,7 +72,14 @@
     right: 4%;
     color: #474747;
 }
-
+#sign_up_general_instructions{
+    margin: 0 auto;
+    max-width: 440px;    
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 13px;
+    text-align: left;
+}
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1300px) { }
 @media (max-width: 1200px) { }
@@ -98,10 +99,7 @@
         min-width: 102%;
         max-width: 102%;        
         z-index: 95 !important;
-    }  
-    .sb-closeButton{
-        display: none;       
-    }           
+    }         
 }
 @media (max-width: 700px) { }
 @media (max-width: 600px) { 
@@ -127,7 +125,12 @@
         padding-bottom: 100px !important;
     }          
 }
-@media (max-width: 420px){}
+@media (max-width: 420px){
+    #sign_up_general_instructions{
+        font-size: 11px;
+        line-height: 18px;
+    }      
+}
 @media (max-width: 360px) { 
     .spotbie-input-info{
         font-size: 16px;
@@ -141,12 +144,9 @@
         max-width: 200px;
         font-size: 18px;
     } 
-    .spotie-login-terms{
+    .spotnie-login-terms{
         font-size: 11px !important;
-    } 
-    .sb-closeButton {
-        display: none;    
-    }         
+    }        
 }
 @media (max-width: 320px) { }
 @media (max-width: 220px) { }
