--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -14,13 +14,11 @@
             *ngIf="displayLocationEnablingInstructions" 
             #businessSettingsAppAnchor>
 
-        <i class="fas fa-marker"></i>
+        <i class="fas fa-map-marker-alt"></i>
 
         <h2 class="spotbie-text-gradient text-uppercase mt-4" style="display: inline-block;">BONKERS!</h2>
         
         <div class='spotbie-text-gradient mt-2'>LOCATION DISABLED</div>
-
-        <div class='spotbie-text-gradient mt-3'>Let's enable your location.</div>
   
         <ol class="sb-locationList spotbie-text-gradient mt-3">
           
